--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
 <head>
      <link rel="stylesheet" href="~/Content/bootstrapNEW.Min.css" >
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet"href="~/Content/bootstrap.css" >
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -86,7 +86,7 @@
 
             <p>
 
-                
+
                 <br />
                 <div class="row" style="display:flex; justify-content:center; margin:0">
                     <div class="column">
@@ -120,7 +120,7 @@
 
 
                 <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
-               <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+                <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
             </p>
 
             <h1>
@@ -179,14 +179,138 @@
                     </div>
 
                 </section>
-
+<link href="~/Custom_CSS_Styles/CounterWidget.css" rel="stylesheet">
 
 
 
             </p>
-            
+            <h1>JQUERY NUMBER ANIMATION</h1>
 
-        </body>
+            <div class="wrapper">
+                <div class="counter col_fourth">
+                    <i class="fa fa-code fa-2x"></i>
+                    <h2 class="timer count-title count-number" data-to="300" data-speed="1500"></h2>
+                    <p class="count-text ">SomeText GoesHere</p>
+                </div>
+
+                <div class="counter col_fourth">
+                    <i class="fa fa-coffee fa-2x"></i>
+                    <h2 class="timer count-title count-number" data-to="1700" data-speed="1500"></h2>
+                    <p class="count-text ">SomeText GoesHere</p>
+                </div>
+
+                <div class="counter col_fourth">
+                    <i class="fa fa-lightbulb-o fa-2x"></i>
+                    <h2 class="timer count-title count-number" data-to="11900" data-speed="1500"></h2>
+                    <p class="count-text ">SomeText GoesHere</p>
+                </div>
+
+                <div class="counter col_fourth end">
+                    <i class="fa fa-bug fa-2x"></i>
+                    <h2 class="timer count-title count-number" data-to="157" data-speed="1500"></h2>
+                    <p class="count-text ">SomeText GoesHere</p>
+                </div>
+            </div>
+            <script>(function ($) {
+                    $.fn.countTo = function (options) {
+                        options = options || {};
+
+                        return $(this).each(function () {
+                            // set options for current element
+                            var settings = $.extend({}, $.fn.countTo.defaults, {
+                                from: $(this).data('from'),
+                                to: $(this).data('to'),
+                                speed: $(this).data('speed'),
+                                refreshInterval: $(this).data('refresh-interval'),
+                                decimals: $(this).data('decimals')
+                            }, options);
+
+                            // how many times to update the value, and how much to increment the value on each update
+                            var loops = Math.ceil(settings.speed / settings.refreshInterval),
+                                increment = (settings.to - settings.from) / loops;
+
+                            // references & variables that will change with each update
+                            var self = this,
+                                $self = $(this),
+                                loopCount = 0,
+                                value = settings.from,
+                                data = $self.data('countTo') || {};
+
+                            $self.data('countTo', data);
+
+                            // if an existing interval can be found, clear it first
+                            if (data.interval) {
+                                clearInterval(data.interval);
+                            }
+                            data.interval = setInterval(updateTimer, settings.refreshInterval);
+
+                            // initialize the element with the starting value
+                            render(value);
+
+                            function updateTimer() {
+                                value += increment;
+                                loopCount++;
+
+                                render(value);
+
+                                if (typeof (settings.onUpdate) == 'function') {
+                                    settings.onUpdate.call(self, value);
+                                }
+
+                                if (loopCount >= loops) {
+                                    // remove the interval
+                                    $self.removeData('countTo');
+                                    clearInterval(data.interval);
+                                    value = settings.to;
+
+                                    if (typeof (settings.onComplete) == 'function') {
+                                        settings.onComplete.call(self, value);
+                                    }
+                                }
+                            }
+
+                            function render(value) {
+                                var formattedValue = settings.formatter.call(self, value, settings);
+                                $self.html(formattedValue);
+                            }
+                        });
+                    };
+
+                    $.fn.countTo.defaults = {
+                        from: 0,               // the number the element should start at
+                        to: 0,                 // the number the element should end at
+                        speed: 1000,           // how long it should take to count between the target numbers
+                        refreshInterval: 100,  // how often the element should be updated
+                        decimals: 0,           // the number of decimal places to show
+                        formatter: formatter,  // handler for formatting the value before rendering
+                        onUpdate: null,        // callback method for every time the element is updated
+                        onComplete: null       // callback method for when the element finishes updating
+                    };
+
+                    function formatter(value, settings) {
+                        return value.toFixed(settings.decimals);
+                    }
+                }(jQuery));
+
+                jQuery(function ($) {
+                    // custom formatting example
+                    $('.count-number').data('countToOptions', {
+                        formatter: function (value, options) {
+                            return value.toFixed(options.decimals).replace(/\B(?=(?:\d{3})+(?!\d))/g, ',');
+                        }
+                    });
+
+                    // start all the timers
+                    $('.timer').each(count);
+
+                    function count(options) {
+                        var $this = $(this);
+                        options = $.extend({}, options || {}, $this.data('countToOptions') || {});
+                        $this.countTo(options);
+                    }
+                });</script>
+
+        <br /><br /><br /><br /><br /></body>
 
 
 
