--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -28,7 +28,7 @@
         ">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
         <!-- Indicators -->
-        <div class="carousel-caption" style="padding-bottom:12vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png" style="height:40px; width:40px" /></h1></div>
+        <div class="carousel-caption" style="padding-bottom:8vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png" style="height:40px; width:40px" /></h1></div>
         <ol class="carousel-indicators" align="middle">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="column">
-                <h2 align="middle" style="padding-left:5vw; color:crimson"><b>Help us make a difference!</b><br /><br /><span style="color:black">At SOS Louisville,<br />we rely on people's kindness<br />to be able to do what we do!</span> </h2>
+                <h2 align="middle" style="padding-left:5vw; color:crimson; text-shadow: 1px 1px black;"><b>Help us make a difference!</b><br /><br /><span style="color:black">At SOS Louisville,<br />we rely on people's kindness<br />to be able to do what we do!</span> </h2>
 
             </div>
             <div class="column" style="padding-left:6vw">
@@ -118,14 +118,34 @@
     <p style="padding-left:6vw; padding-right:6vw">
 
 
-        <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
+        <span style="color:red; font-size:32px;text-shadow: 1px 1px black;">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px;text-shadow: 1px 1px black;"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
         <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
     </p>
-    <h1>
-        <div style="display: flex; justify-content: center;">
-            <b> Subscribe to our quarterly mailing list:</b><br />
-        </div>
+
+    <h1 style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;">
+        <b>Check us out on Social Media!</b>
+
     </h1>
+    <br /><br />
+    <div style="display:flex; justify-content:center;">
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="485" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+        <div style="position:relative;padding-left:3vw;">
+            <a class="twitter-timeline" style="float:right;" data-width="340" data-height="500" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <!-- InstaWidget -->
+        <!-- InstaWidget -->
+        <!-- InstaWidget -->
+        <div style="padding-left:3vw">
+            <a href="https://instawidget.net/v/user/SOSLouisville" id="link-2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa">soslouisville</a>
+            <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
+        </div>
+    </div>
+   <br /><br /> <div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+    <div style="display: flex; justify-content: center;text-shadow: 1px 2px black;color:crimson;font-size:40px">
+        <b> Subscribe to our quarterly mailing list:</b><br />
+    </div>
+
     <form class="form-style-9" style="width:700px">
         <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
         <ul>
@@ -147,35 +167,14 @@
     </form>
 
 
-    <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
-    <p>
-        <h1>
-            <div style="display: flex; justify-content: center;">
-                <b>Check us out on Social Media!</b>
-            </div>
-        </h1>
-        <br /><br /> <section>
-            <div style="display:flex; justify-content:center;">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="485" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-                <div style="position:relative;padding-left:3vw;">
-                    <a class="twitter-timeline" style="float:right;" data-width="340" data-height="500" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-                <!-- InstaWidget -->
-                <!-- InstaWidget -->
-                <!-- InstaWidget -->
-                <div style="padding-left:3vw">
-                    <a href="https://instawidget.net/v/user/SOSLouisville" id="link-2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa">soslouisville</a>
-                    <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
-                </div>
-            </div>
-
-        </section>
-        <link href="~/Custom_CSS_Styles/CounterWidget.css" rel="stylesheet">
 
 
 
-    </p>
+    <link href="~/Custom_CSS_Styles/CounterWidget.css" rel="stylesheet">
+
+
+
+
     <h1>JQUERY NUMBER ANIMATION</h1>
 
     <div class="wrapper">
@@ -204,7 +203,7 @@
         </div>
     </div>
     <script>
-(function ($) {
+        (function ($) {
             $.fn.countTo = function (options) {
                 options = options || {};
 
